# lab_project_00

./: Cargo.toml  LICENSE.md  README.md
shaders/: shader.wgsl
src/: camera.rs  interfaces.rs  main.rs  objects.rs  pipeline.rs  timer.rs  utils.rs
